src/test/ui/coherence/coherence-impl-trait-for-trait-object-safe.stderr
error[E0038]: the trait `NotObjectSafe` cannot be made into an object
  --> $DIR/coherence-impl-trait-for-trait-object-safe.rs:7:24
   |
LL | trait NotObjectSafe { fn eq(&self, other: Self); }
   |       -------------                       ---- ...because method `eq` references the `Self` type in this parameter
   |       |
   |       this trait cannot be made into an object...
LL | impl NotObjectSafe for dyn NotObjectSafe { }
   |                        ^^^^^^^^^^^^^^^^^ the trait `NotObjectSafe` cannot be made into an object
   |
   = help: consider moving `eq` to another trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
